name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pnwamk/advent
license:             BSD3
license-file:        LICENSE
author:              Andrew Kent
maintainer:          pnwamk@gmail.com
copyright:           2018 Andrew Kent
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2018
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
  other-modules: Misc
               , Day01
               , Day02
               , Day03
               , Day04
               , Day05
